<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/palette2"
        android:layout_alignParentBottom="true"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/palette1"
        android:layout_above="@+id/imageView"
        android:layout_toEndOf="@+id/prepare" />

    <ImageButton
        android:id="@+id/conceal"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:background="#99ccff"
        app:srcCompat="@drawable/down"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/albumimput"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="28dp"
        android:background="#99ccff"
        app:srcCompat="@drawable/album"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/newtype"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignBottom="@+id/albumimput"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:background="#99ccff"
        app:srcCompat="@drawable/folder" />

    <ImageView
        android:id="@+id/circularCarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circular"
        android:background="#ffffff"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/shoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/camera"
        android:background="#ffffff"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/albumImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_import"
        android:textColor="#ffffff"
        android:layout_below="@+id/newtype"
        android:layout_alignStart="@+id/albumimput" />

    <TextView
        android:id="@+id/newType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/albumImport"
        android:layout_alignStart="@+id/newtype"
        android:text="@string/new_type" />

    <TextView
        android:id="@+id/characterRrecognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circularCarrier"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:text="@string/character_recognition" />

    <ImageView
        android:id="@+id/prepare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/palette1"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/top"
        android:layout_width="40sp"
        android:layout_height="40sp"
        app:srcCompat="@drawable/top"
        android:background="#99ccff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>


</RelativeLayout>
